@@ -1,11 +1,13 @@
 package Remoa.BE.Notice.Service;
 
 import Remoa.BE.Notice.Dto.Req.ReqNoticeDto;
+import Remoa.BE.Notice.Dto.Res.NoticeResponseDto;
 import Remoa.BE.Notice.Dto.Res.ResAllNoticeDto;
 import Remoa.BE.Notice.Dto.Res.ResNoticeDto;
 import Remoa.BE.Notice.Repository.NoticeRepository;
 import Remoa.BE.Notice.domain.Notice;
-import com.amazonaws.services.kms.model.NotFoundException;
+import Remoa.BE.exception.CustomMessage;
+import Remoa.BE.exception.response.BaseException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -16,6 +18,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.HashMap;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,10 +28,11 @@ public class NoticeService {
     private final NoticeRepository noticeRepository;
 
     @Transactional
-    public void registerNotice(ReqNoticeDto reqNoticeDto) {
-        noticeRepository.save(reqNoticeDto.toEntityNotice()); //builder를 이용해 객체를 직접 생성하지 않고 Notice 저장
+    public void registerNotice(ReqNoticeDto reqNoticeDto, String enrollNickname) {
+        noticeRepository.save(reqNoticeDto.toEntityNotice(enrollNickname)); //builder를 이용해 객체를 직접 생성하지 않고 Notice 저장
     }
-    public HashMap<String, Object> getNotice(int pageNumber) {
+
+    public NoticeResponseDto getNotice(int pageNumber) {
 
         HashMap<String, Object> resultMap = new HashMap<>();
 
@@ -36,25 +40,26 @@ public class NoticeService {
 
         Page<Notice> notices = noticeRepository.findAll(PageRequest.of(pageNumber, NOTICE_NUMBER, Sort.by("postingTime").descending()));
 
-        resultMap.put("notices", notices.stream().map(ResNoticeDto::new).collect(Collectors.toList())); //조회한 레퍼런스들
-        resultMap.put("totalPages", notices.getTotalPages()); //전체 페이지의 수
-        resultMap.put("totalOfAllNotices", notices.getTotalElements()); //모든 레퍼런스의 수
-        resultMap.put("totalOfPageElements", notices.getNumberOfElements()); //현 페이지의 레퍼런스 수
+        List<ResNoticeDto> noticeDtos = notices.stream().map(ResNoticeDto::new).toList();
 
-        return resultMap;
-
+        return NoticeResponseDto.builder()
+                .notices(noticeDtos)
+                .totalPages(notices.getTotalPages())
+                .totalOfAllNotices(notices.getTotalElements())
+                .totalOfPageElements(notices.getNumberOfElements())
+                .build();
     }
 
     @Transactional(readOnly = true)
     public ResAllNoticeDto getNoticeView(int view) {
         return noticeRepository.findById((long) view).map(ResAllNoticeDto::new).orElseThrow(() ->
-                new NotFoundException("해당 공지를 찾을 수 없습니다."));
+                new BaseException(CustomMessage.NO_ID));
     }
 
     @Transactional
     public void NoticeViewCount(int view) {
         Notice notice = noticeRepository.findById((long) view).orElseThrow(() ->
-                new NotFoundException("해당 공지를 찾을 수 없습니다."));
+                new BaseException(CustomMessage.NO_ID));
         notice.addNoticeViewCount();
         noticeRepository.save(notice);
 
